--- a/Views/ResidentialContent.axaml
+++ b/Views/ResidentialContent.axaml
@@ -4,8 +4,8 @@
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
-             x:Class="WarrantGenerator.Views.AppOrderContentTab"
-			 x:DataType="vm:AppOrderContentViewModel">
+             x:Class="WarrantGenerator.Views.ResidentialContentTab"
+			 x:DataType="vm:ResidentialContentViewModel">
 
 	<ScrollViewer>
 		<Grid ColumnDefinitions="*, 10, *">
@@ -16,11 +16,94 @@
 						Spacing="10"
 						HorizontalAlignment="Stretch">
 
-				<Grid ColumnDefinitions="Auto, *">
+				<!-- Name Gender Rank Grouping -->
+				<StackPanel Grid.Column="0"
+							Orientation="Horizontal"
+							Spacing="5">
+
+					<!-- Officer Name -->
+					<StackPanel>
+						<TextBlock Text="Officer Name"
+								   VerticalAlignment="Center"
+								   Margin="5, 0, 0, 0" />
+						<Border BorderBrush="{Binding OfficerNameBorder}"
+								BorderThickness="2">
+							<TextBox x:Name="OfficerNameTextBox"
+									 Text="{Binding OfficerNameText}"
+									 Width="200"/>
+						</Border>
+					</StackPanel>
+					<!-- /Officer Name -->
+
+					<!-- Officer Gender -->
+					<StackPanel>
+						<TextBlock Text="Gender"
+								   VerticalAlignment="Center"
+								   Margin="5, 0, 0, 0" />
+						<Border BorderBrush="{Binding OfficerGenderBorder}"
+								BorderThickness="2">
+							<StackPanel Orientation="Horizontal" Spacing="10">
+								<ComboBox ItemsSource="{Binding OfficerGender}"
+										  SelectedItem="{Binding OfficerGenderSelection}">
+								</ComboBox>
+							</StackPanel>
+						</Border>
+					</StackPanel>
+					<!-- /Officer Gender -->
+
+					<!-- Officer Rank -->
+					<StackPanel>
+						<TextBlock Text="Officer Rank"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+						<Border BorderBrush="{Binding OfficerRankBorder}"
+								BorderThickness="2">
+							<ComboBox ItemsSource="{Binding OfficerRanks}"
+									  SelectedItem="{Binding OfficerRankSelection}"
+									  PlaceholderText="Select Rank">
+							</ComboBox>
+						</Border>
+					</StackPanel>
+
+					<StackPanel VerticalAlignment="Bottom">
+						<Border BorderBrush="{Binding CustomOfficerRankBorder}"
+								BorderThickness="2">
+							<TextBox Text="{Binding CustomOfficerRankText}"
+									 Width="150"
+									 IsVisible="{Binding CustomOfficerRankVisibility}" />
+						</Border>
+					</StackPanel>
+					<!-- /Officer Rank -->
+
+				</StackPanel>
+				<!-- /Name Gender Rank Grouping -->
+
+				<!-- Employment Duration and District Grouping -->
+				<StackPanel Orientation="Horizontal"
+							Spacing="25">
+
+					<!-- Time with KPD -->
+					<StackPanel Margin="10, 0, 0, 0">
+						<TextBlock Text="Time with KPD"
+						   VerticalAlignment="Center"
+						   Margin="5, 0, 0, 0" />
+						<StackPanel Orientation="Horizontal">
+							<Border BorderBrush="{Binding EmploymentDurationBorder}"
+									BorderThickness="2">
+								<TextBox Text="{Binding EmploymentDurationText}" />
+							</Border>
+							<ComboBox
+								ItemsSource="{Binding DurationTypes}"
+								SelectedItem="{Binding DurationTypeSelection}"
+								SelectedIndex="0"
+								VerticalAlignment="Center">
+							</ComboBox>
+						</StackPanel>
+					</StackPanel>
+					<!-- /Time with KPD -->
 
 					<!-- Court District -->
-					<StackPanel Grid.Column="0"
-								HorizontalAlignment="Stretch">
+					<StackPanel HorizontalAlignment="Stretch">
 						<TextBlock Text="Court District"
 								   VerticalAlignment="Center"
 								   Margin="5, 0, 0, 0" />
@@ -31,110 +114,51 @@
 					</StackPanel>
 					<!-- /Court District -->
 
-					<!-- Organization -->
-					<StackPanel Grid.Column="1"
-								Margin="5, 0, 0, 0"
-								HorizontalAlignment="Stretch">
-						<TextBlock Text="Organization"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding OrganizationBorder}"
-								BorderThickness="2">
-							<TextBox Text="{Binding OrganizationText}" />
-						</Border>
-					</StackPanel>
-					<!-- /Organization -->
+				</StackPanel>
+				<!-- /Employment Duration and District Grouping -->
 
+				<!-- Special Content -->
+				<Grid Grid.Column="0"
+					  ColumnDefinitions="Auto, Auto">
+					<CheckBox Grid.Column="0"
+							  Content="Utilize SWAT"
+							  Margin="15, 0, 0, 0"
+							  IsChecked="{Binding SWATChecked}" />
+					<CheckBox Grid.Column="1"
+							  Content="Utilize Crime Unit"
+							  Margin="15, 0, 0, 0"
+							  IsChecked="{Binding CrimeUnitChecked}" />
 				</Grid>
+				<!-- /Special Content -->
 
-				<Grid ColumnDefinitions="Auto, Auto, Auto">
-
-					<!-- Officer Gender -->
-					<StackPanel Grid.Column="0">
-						<TextBlock Text="Officer Gender"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-						<Border BorderBrush="{Binding OfficerGenderBorder}"
-								BorderThickness="2">
-							<StackPanel Orientation="Horizontal" Spacing="10">
-								<CheckBox Content="Female" IsChecked="{Binding FemaleChecked}" />
-								<CheckBox Content="Male" IsChecked="{Binding MaleChecked}" />
-							</StackPanel>
-						</Border>
-					</StackPanel>
-					<!-- /Officer Gender -->
-
-					<!-- Officer Title -->
-					<StackPanel Grid.Row="1"
-								Grid.Column="1">
-
-						<StackPanel Orientation="Horizontal">
-							<StackPanel>
-								<TextBlock Text="Officer Title"
-								   VerticalAlignment="Center"
-								   Margin="5, 0, 0, 0" />
-								<Border BorderBrush="{Binding OfficerTitleBorder}"
-										BorderThickness="2">
-									<ComboBox ItemsSource="{Binding OfficerTitles}"
-											  SelectedItem="{Binding OfficerTitleSelection}"
-											  PlaceholderText="Select Rank">
-									</ComboBox>
-								</Border>
-							</StackPanel>
-
-							<StackPanel VerticalAlignment="Bottom">
-								<Border BorderBrush="{Binding CustomOfficerTitleBorder}"
-										BorderThickness="2">
-									<TextBox Text="{Binding CustomOfficerTitleText}"
-											 IsVisible="{Binding CustomOfficerTitleVisibility}" />
-								</Border>
-							</StackPanel>
-						</StackPanel>
-					</StackPanel>
-					<!-- /Officer Title -->
-
-				</Grid>
-
-				<Grid ColumnDefinitions="*, Auto">
-					<StackPanel Orientation="Horizontal"
-								Grid.Column="0">
-						<!-- Officer Name -->
-						<StackPanel>
-							<TextBlock Text="Officer Name"
-									   VerticalAlignment="Center"
-									   Margin="5, 0, 0, 0" />
-							<Border BorderBrush="{Binding OfficerNameBorder}"
-									BorderThickness="2">
-								<TextBox Text="{Binding OfficerNameText}"
-										 Width="100"/>
-							</Border>
-						</StackPanel>
-						<!-- /Officer Name -->
-
-						<!-- Time with the Organization -->
-						<StackPanel Margin="10, 0, 0, 0">
-							<TextBlock Text="Time with the Organization"
+				<!-- Residence Address -->
+				<StackPanel>
+					<TextBlock Text="Residence Address"
 							   VerticalAlignment="Center"
 							   Margin="5, 0, 0, 0" />
-							<StackPanel Orientation="Horizontal">
-								<Border BorderBrush="{Binding EmploymentDurationBorder}"
-										BorderThickness="2">
-									<TextBox Text="{Binding EmploymentDurationText}" />
-								</Border>
-								<ComboBox
-									ItemsSource="{Binding DurationTypes}"
-									SelectedItem="{Binding DurationTypeSelection}"
-									SelectedIndex="0"
-									VerticalAlignment="Center">
-								</ComboBox>
-							</StackPanel>
-						</StackPanel>
-						<!-- /Time with the Organization -->
+					<Border BorderBrush="{Binding ResidenceAddressBorder}"
+							BorderThickness="2">
+						<TextBox Text="{Binding ResidenceAddressText}" />
+					</Border>
+				</StackPanel>
+				<!-- /Residence Address -->
 
-					</StackPanel>
+				<!-- Residence Legal Description -->
+				<StackPanel>
+					<TextBlock Text="Residence Legal Description"
+							   VerticalAlignment="Center"
+							   Margin="5, 0, 0, 0" />
+					<Border BorderBrush="{Binding ResidenceDescriptionBorder}"
+							BorderThickness="2">
+						<TextBox Text="{Binding ResidenceDescriptionText}"
+								 AcceptsReturn="True"
+								 TextWrapping="Wrap"
+								 Height="60" />
+					</Border>
+				</StackPanel>
+				<!-- /Residence Legal Description -->
 
-				</Grid>
-
+				<!-- Crime Entry Grouping -->
 				<!-- Crimes List -->
 				<StackPanel>
 					<TextBlock Text="Crimes Associated with this Warrant"
@@ -147,7 +171,7 @@
 								 BorderThickness="1"
 								 CornerRadius="2"
 								 Padding="4"
-								 Height="82">
+								 Height="120">
 							<ListBox.Styles>
 								<Style Selector="ListBoxItem">
 									<Setter Property="Padding" Value="1" />
@@ -219,33 +243,28 @@
 					</Grid>
 				</StackPanel>
 				<!-- /Crime Entry Group -->
+				<!-- Crime Entry Grouping -->
 
-				<!-- Residence Address -->
-				<StackPanel>
-					<TextBlock Text="Residence Address"
-							   VerticalAlignment="Center"
-							   Margin="5, 0, 0, 0" />
-					<Border BorderBrush="{Binding ResidenceAddressBorder}"
-							BorderThickness="2">
-						<TextBox Text="{Binding ResidenceAddressText}" />
-					</Border>
-				</StackPanel>
-				<!-- /Residence Address -->
-
-				<!-- Residence Legal Description -->
-				<StackPanel>
-					<TextBlock Text="Residence Legal Description"
-							   VerticalAlignment="Center"
-							   Margin="5, 0, 0, 0" />
-					<Border BorderBrush="{Binding ResidenceDescriptionBorder}"
-							BorderThickness="2">
-						<TextBox Text="{Binding ResidenceDescriptionText}"
-								 AcceptsReturn="True"
-								 TextWrapping="Wrap"
-								 Height="60" />
-					</Border>
-				</StackPanel>
-				<!-- /Residence Legal Description -->
+				<!-- Document Types -->
+				<Border Grid.Column="0"
+						BorderBrush="{Binding DocumentTypeCheckboxesBorder}"
+						BorderThickness="2">
+					<Grid Grid.Column="0"
+						  ColumnDefinitions="Auto, Auto, Auto, Auto">
+						<TextBlock Grid.Column="0"
+								   Text="Documents to Generate:"
+								   VerticalAlignment="Center"/>
+						<CheckBox Grid.Column="1"
+								  Content="Search Warrant Application"
+								  Margin="15, 0, 0, 0"
+								  IsChecked="{Binding SearchWarrantApplicationChecked}" />
+						<CheckBox Grid.Column="2"
+								  Content="Search Warrant"
+								  Margin="15, 0, 0, 0"
+								  IsChecked="{Binding SearchWarrantChecked}" />
+					</Grid>
+				</Border>
+				<!-- /Document Types -->
 
 				<!-- Output File -->
 				<StackPanel Grid.Column="0">
