--- a/Views/ReturnInventoryContent.axaml
+++ b/Views/ReturnInventoryContent.axaml
@@ -131,23 +131,23 @@
 			</StackPanel>
 			<!-- /Served Date -->
 
-			<!-- Searchable Property -->
+			<!-- Seizable Property -->
 			<StackPanel Grid.Column="0"
 						Grid.Row="1"
 						Grid.ColumnSpan="3"
 						Margin="0, 10, 0, 0">
-				<TextBlock Text="Description of Searchable Property"
+				<TextBlock Text="Description of Seizable Property"
 						   Margin="5, 0, 0, 0" />
-				<Border BorderBrush="{Binding SearchablePropertyBorder}"
+				<Border BorderBrush="{Binding SeizablePropertyBorder}"
 						BorderThickness="2">
-					<TextBox x:Name="SearchablePropertyTextBox"
-						     Text="{Binding SearchablePropertyText}"
+					<TextBox x:Name="SeizablePropertyTextBox"
+						     Text="{Binding SeizablePropertyText}"
 							 AcceptsReturn="True"
 							 TextWrapping="Wrap"
 							 MinHeight="150" />
 				</Border>
 			</StackPanel>
-			<!-- /Searchable Property -->
+			<!-- /Seizable Property -->
 
 			<!-- Seized Property -->
 			<StackPanel Grid.Column="0"
